header layout 추가

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,16 +4,6 @@
 
 <head>
 	<meta charset="utf-8">
-	<!--  This file has been downloaded from bootdey.com    @bootdey on twitter -->
-	<!--  All snippets are MIT license https://bootdey.com/license -->
-	<!--
-        The codes are free, but we require linking to our web site.
-        Why to Link?
-        A true story: one girl didn't set a link and had no decent date for two years, and another guy set a link and got a top ranking in Google!
-        Where to Put the Link?
-        home, about, credits... or in a good page that you want
-        THANK YOU MY FRIEND!
-    -->
 	<title>bullet board</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -271,6 +261,7 @@
 </head>
 
 <body>
+	<th:block th:replace="fragments/header :: headerFragment"></th:block>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 	<div class="container">
 		<div class="row">
