--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -261,7 +261,7 @@
 </head>
 
 <body>
-	<th:block th:replace="fragments/header :: headerFragment"></th:block>
+	<th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 	<div class="container">
 		<div class="row">
@@ -310,7 +310,7 @@
 		</div>
 	</div>
 
-	<th:block th:replace="fragments/footer :: footerFragment"></th:block>
+	<th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
 
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
