게시글 추가 항목 추가

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,9 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
+					<li><a href="/main/new">게시글 추가</a></li>
+				</ul>
+				<ul class="nav navbar-nav">
 					<li><a href="/settings">설정</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
