--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -12,6 +12,50 @@
 
 <body>
 	<th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-8 col-md-offset-2">
+
+				<h1>게시글 추가</h1>
+
+				<form action="/main/new/addpost.do" method="post">
+
+					<div class="form-group">
+						<label for="postName">제목 <span class="require">*</span></label>
+						<input type="text" class="form-control" name="postName" />
+					</div>
+
+					<div class="form-group">
+						<label for="author">작성자 <span class="require">*</span></label>
+						<input type="text" class="form-control" name="author" />
+					</div>
+
+					<div class="form-group">
+						<label for="summary">내용 요약 <span class="require">*</span></label>
+						<input type="text" class="form-control" name="summary" />
+					</div>
+
+					<div class="form-group">
+						<label for="description">내용 <span class="require">*</span></label>
+						<textarea rows="5" class="form-control" name="description" style="resize: vertical"></textarea>
+					</div>
+
+					<div class="form-group">
+						<p><span class="require">*</span> - 필수로 적어야 함</p>
+					</div>
+
+					<div class="form-group">
+						<input type="submit" id="submit" value="저장" class="btn btn-primary">
+						<button type="button" class="btn btn-default" th:onclick="|window.location.href='/cancel'|">
+							취소
+						</button>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</div>
 	<th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
 </body>
 
