--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -19,30 +19,27 @@
 
 				<h1>게시글 추가</h1>
 
-				<form action="/main/new/addpost.do" method="post">
+				<form name="validForm" action="/main/new/addpost.do" onsubmit="validate();" method="post">
 
 					<div class="form-group">
 						<label for="postName">제목 <span class="require">*</span></label>
-						<input type="text" class="form-control" name="postName" th:value="${postDto.postName}" />
-						<span th:text="${valid_postName}" style="color: red"></span>
+						<input type="text" class="form-control" name="postName" />
 					</div>
 
 					<div class="form-group">
 						<label for="author">작성자 <span class="require">*</span></label>
-						<input type="text" class="form-control" name="author" th:value="${postDto.author}" />
-						<span th:text="${valid_author}" style="color: red"></span>
+						<input id="author" type="text" class="form-control" name="author" />
 					</div>
 
 					<div class="form-group">
-						<label for="summary">내용 요약 <span class="require">*</span></label>
-						<input type="text" class="form-control" name="summary" th:value="${postDto.summary}" />
+						<label for="summary">내용 요약 <span class="require"></span></label>
+						<input type="text" class="form-control" name="summary" />
 					</div>
 
 					<div class="form-group">
 						<label for="description">내용 <span class="require">*</span></label>
-						<textarea rows="5" class="form-control" name="description" th:value="${postDto.description}"
+						<textarea id="description" rows="5" class="form-control" name="description"
 							style="resize: vertical"></textarea>
-						<span th:text="${valid_description}" style="color: red"></span>
 					</div>
 
 					<div class="form-group">
@@ -51,7 +48,8 @@
 
 					<div class="form-group">
 						<input type="submit" id="submit" value="저장" class="btn btn-primary">
-						<button type="button" class="btn btn-default" th:onclick="|window.location.href='/cancel'|">
+						<button type="button" class="btn btn-default" th:onclick="|window.location.href='/cancel'|"
+							onclick="validate()">
 							취소
 						</button>
 					</div>
@@ -61,6 +59,29 @@
 		</div>
 	</div>
 	<th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
+
+	<script>
+		function validate() {
+			const postName = document.forms["validForm"]["postName"].value;
+			const author = document.forms["validForm"]["author"].value;
+			const desc = document.forms["validForm"]["description"].value;
+
+			if (postName == "" || postName == null) {
+				alert("제목은 필수로 적으셔야 합니다.");
+				return false;
+			}
+			if (author == "" || author == null) {
+				alert("작성자는 필수로 적으셔야 합니다.");
+				return false;
+			}
+			if (desc == "" || desc == null) {
+				alert("내용은 필수로 적으셔야 합니다.");
+				return false;
+			}
+
+
+		}
+	</script>
 </body>
 
 </html>
