--- a/src/main/resources/templates/postDetail.html
+++ b/src/main/resources/templates/postDetail.html
@@ -12,6 +12,23 @@
 
 <body>
 	<th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8">
+
+				<h1><a href="" th:text="${post.postName}"></a></h1>
+				<p class="lead"><i class="fa fa-user"></i> by <a href="" th:text="${post.author}"></a>
+				</p>
+				<hr>
+				<p><i class="fa fa-calendar"></i> Posted on <span th:text="${{post.modifiedDate}}"></span></p>
+				<hr>
+				<p class="lead" th:text="${post.summary}"></p>
+				<p th:text="${post.description}"></p>
+			</div>
+		</div>
+	</div>
+
 	<th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
 </body>
 
