postEdit 화면으로 이어지게 href, th:attrappend 추

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -293,8 +293,9 @@
 								<div class="col-md-1 forum-info">
 									<span class="views-number">
 										<span class="fa-stack">
-											<i class="fa fa-square fa-stack-2x"></i>
-											<i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+											<a class="fa fa-square fa-stack-2x"></a>
+											<a class="fa fa-pencil fa-stack-1x fa-inverse" href="/main/postEdit?postNo="
+												th:attrappend="href=${post.postNo}"></a>
 										</span>
 									</span>
 
